--- a/UdongZip/src/main/webapp/resources/css/user/agentEnrollForm.css
+++ b/UdongZip/src/main/webapp/resources/css/user/agentEnrollForm.css
@@ -4,6 +4,7 @@
         width: 900px;
         margin: auto;
         height: 100%;
+        border: 0.5px solid gray;
     }
 
     .info-table {
@@ -75,6 +76,14 @@
         border-radius: 4px;
         cursor: pointer;
     }
+    
+    #idCheck {
+    	margin-top: 5px;
+    	margin-left: 10px;
+    	color: #595959;
+    	font-size: 13px;
+    	display: none;
+    }
 
     .file-btn {
         background-color: #595959;
@@ -88,4 +97,18 @@
     .info-text {
         font-size: small;
         color: gray;
+    }
+    
+    .validate-area {
+    	margin-top: 10px;
+    	font-size: 12px;
+    	color: gray;
+    }
+    
+    .possible {
+    	color: green;
+    }
+    
+    .impossible {
+    	color: red;
     }
