--- a/UdongZip/src/main/webapp/resources/css/user/houseMap.css
+++ b/UdongZip/src/main/webapp/resources/css/user/houseMap.css
@@ -18,11 +18,11 @@
 	}
 	
 	#content1 {
-		width : 80%;
+		width : 70%;
 		
 	}
 	#content2 {
-		width : 20%;
+		width : 30%;
 	}
 	/* map */
 	#map {
@@ -33,6 +33,8 @@
 	/* search */
 	#address_kakao {
 		width : 100%;
+		border : 1px solid #0d6efd;
+		border-radius: 10px;
 	}
 	/* slide */
 	#search-detail>#search-q {
@@ -40,14 +42,16 @@
         height : 30px;
         line-height : 30px;
         border-radius : 5px;
-        border : 1px solid #0057A4;
+        border : 1px solid #0d6efd;
         cursor : pointer;
         text-align : center; 
+        color : white;
+        background-color : #0d6efd;
         
     }
     #search-detail>#search-a {
         border : 1px solid lightgray;
-        background-color : #0057A4;
+        background-color : #0d6efd;
         color : white;
         width : 100%;
         height : 100%;
@@ -59,6 +63,34 @@
         text-align : center;
         margin : auto;
     }
-    
-    
+    #searchBtn {
+	all: unset; 
+           background-color: #0d6efd;
+           color: white;
+           padding: 5px 20px;
+           border-radius: 10px;
+           cursor: pointer;
+           text-align : center;
+       }
+    #resetBtn {
+	all: unset; 
+           background-color: white;
+           color: black;
+           padding: 2px 10px;
+           border-radius: 10px;
+           cursor: pointer;
+           text-align : center;
+           border : 1px solid black;
+       }   
+    #checkBtn {
+	all: unset; 
+           background-color: white;
+           color: black;
+           padding: 2px 20px;
+           border-radius: 10px;
+           cursor: pointer;
+           text-align : center;
+           border : 1px solid black;
+       } 
+   #select-house:hover {cursor:pointer;}  
     
