--- a/UdongZip/src/main/webapp/resources/css/user/houseMap.css
+++ b/UdongZip/src/main/webapp/resources/css/user/houseMap.css
@@ -30,12 +30,6 @@
 		height : 700px;
 		
 	}
-	/* search */
-	#address_kakao {
-		width : 100%;
-		border : 1px solid #0d6efd;
-		border-radius: 10px;
-	}
 	/* slide */
 	#search-detail>#search-q {
         width : 100%;
@@ -51,8 +45,8 @@
     }
     #search-detail>#search-a {
         border : 1px solid lightgray;
-        background-color : #0d6efd;
-        color : white;
+        background-color :white;
+        color : black;
         width : 100%;
         height : 100%;
         margin-top : 5px;
@@ -63,34 +57,39 @@
         text-align : center;
         margin : auto;
     }
-    #searchBtn {
-	all: unset; 
-           background-color: #0d6efd;
-           color: white;
-           padding: 5px 20px;
-           border-radius: 10px;
-           cursor: pointer;
-           text-align : center;
-       }
-    #resetBtn {
-	all: unset; 
-           background-color: white;
-           color: black;
-           padding: 2px 10px;
-           border-radius: 10px;
-           cursor: pointer;
-           text-align : center;
-           border : 1px solid black;
-       }   
-    #checkBtn {
-	all: unset; 
-           background-color: white;
-           color: black;
-           padding: 2px 20px;
-           border-radius: 10px;
-           cursor: pointer;
-           text-align : center;
-           border : 1px solid black;
-       } 
-   #select-house:hover {cursor:pointer;}  
+    #angle {
+    	width:20px; 
+    	height:20px;
+    }
+    
+    #select-house {
+    width: 100%;
+    height:630px;
+    float: right;
+    overflow: auto;
+    cursor: pointer;
+	}
+    
+    #select-house::-webkit-scrollbar {
+    width: 8px;
+  	}
+
+  	#select-house::-webkit-scrollbar-corner {
+    	background-color: white;
+    	border-radius: 10px;
+  	}
+
+  	#select-house::-webkit-scrollbar-thumb {
+    	background-color: lightgrey;
+    	border-radius: 10px;
+  	}
+
+  	#select-house::-webkit-scrollbar-thumb:hover {
+    	background-color: gray;
+  	}
+
+  	#select-house::-webkit-scrollbar-track {
+    	border-radius: 10px;
+    	box-shadow: inset 0px 0px 5px white;
+  	}
     
