관리자 공지사항 수정 기능추가
관리자
- 공지사항 수정 기능

--- a/UdongZip/src/main/webapp/resources/css/admin/noticeEnrollForm.css
+++ b/UdongZip/src/main/webapp/resources/css/admin/noticeEnrollForm.css
@@ -24,3 +24,7 @@
         .enroll-table *{
             margin: 7px;
         }
+        .enroll-btn{
+            width: 75%;
+            margin: auto;
+        }
