--- a/UdongZip/src/main/webapp/resources/css/admin/noticeUpdateForm.css
+++ b/UdongZip/src/main/webapp/resources/css/admin/noticeUpdateForm.css
@@ -24,3 +24,9 @@
         .update-table *{
             margin: 7px;
         }
+        
+        .update-btn{
+            width: 75%;
+            margin:auto;
+        }
+        
