--- a/UdongZip/src/main/webapp/resources/css/user/agentUpdateForm.css
+++ b/UdongZip/src/main/webapp/resources/css/user/agentUpdateForm.css
@@ -6,6 +6,13 @@
         height: 100%;
         border: 0.5px solid gray;
     }
+    
+   	#pwd-update-form {
+        width: 900px;
+        margin: auto;
+        height: 100%;
+        border: 0.5px solid gray;
+    }
 
     .info-table {
         width: 600px;
@@ -15,31 +22,14 @@
         margin-bottom: 0;
     }
     
-    .input-group { position: relative; }
-
-    .input {
-        padding: 10px;
-        border: none;
-        border-radius: 4px;
-        color: black;
-        outline: 1px solid #0057A4;
-        padding-inline: 5px;
-       	margin-bottom: 10px;
-    }
-
-    .input-label {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(10px, -14px) scale(.8);
-        padding-inline: 5px;
-        transition: transform .25s;
-        color: #0057A4;
-        background-color: #fff;
+    textarea {
+    	height: 200px !important;
+    	width: 700px !important;
     }
     
     .no-edit {
     	cursor: default;
+    	background-color: #f6f6f6 !important;
     }
 
     .short-input { width: 250px; }
@@ -92,6 +82,10 @@
         cursor: pointer;
     }
     
+    #emailCheck {
+    	color: #595959;
+    }
+    
     .info-text {
         font-size: small;
         color: gray;
@@ -138,6 +132,13 @@
         transform: translateX(-50%) translateY(-50%);
     }
     
+    #timer-area {
+    	height: 20px;
+    	width: 200px;
+    	font-size: 12px;
+    	text-align: left;
+    }
+    
     .delete-confirm {
     	background-color: red;
     }
@@ -145,4 +146,22 @@
     #delete-form {
     	width: 300px;
     	margin: auto;
+    }
+    
+    .confirm-btn {
+    	background-color: #0057A4;
+    }
+    
+        .validate-area {
+    	margin-top: 10px;
+    	font-size: 12px;
+    	color: gray;
+    }
+    
+    .possible {
+    	color: green;
+    }
+    
+    .impossible {
+    	color: red;
     }
