--- a/UdongZip/src/main/webapp/resources/css/user/serviceListView.css
+++ b/UdongZip/src/main/webapp/resources/css/user/serviceListView.css
@@ -10,7 +10,6 @@
         /* 콘텐트 영역 */
         #content-area{
             /* border: 2px solid darkblue; */
-            height: 100%; /* 추가 구문 */
             margin: auto;
             width: 1000px;
         }
@@ -95,6 +94,7 @@
             width:100%;
             margin:auto;
             margin-top: 50px;
+            margin-bottom: 150px;
         }
         #tab-2>.innerOuter {
             border:1px solid #595959;
