--- a/UdongZip/src/main/webapp/resources/css/user/houseUpdateForm.css
+++ b/UdongZip/src/main/webapp/resources/css/user/houseUpdateForm.css
@@ -37,6 +37,24 @@
     .info-table td {
         padding-left: 20px;
     }
+	
+	.form-floating select {
+    	width: 120px !important;
+    }
+    
+    .form-floating {
+    	margin: 10px 0px !important;
+    }
+    
+    #subway-column div {
+    	float: left;
+    }
+    
+    textarea {
+    	width: 600px !important;
+    	height: 600px !important;
+    }
+
 
     .input-group { 
     	position: relative;
@@ -82,9 +100,9 @@
         outline-color: #0057A4;
     }
 
-    .short-input { width: 250px; }
+    .short-input { width: 250px !important; }
 
-    .long-input { width: 550px; }
+    .long-input { width: 550px !important; }
 
     .info-table textarea {
         width: 550px;
