- 개인회원 / 파일 첨부 / 접근 제어 관련 기능 보완
- 개인회원 회원가입 유효성 검사 추가
- 개인회원 비밀번호 변경 기능 추가
- 개인회원 이메일 인증 기능 추가
- 파일 확장자, 용량 제한 검사 기능 추가
- 접근 권한 제어 로직 수정

--- a/UdongZip/src/main/webapp/resources/css/user/agentEnrollForm.css
+++ b/UdongZip/src/main/webapp/resources/css/user/agentEnrollForm.css
@@ -77,6 +77,13 @@
         color: gray;
     }
     
+    .info-area {
+    	width: 600px;
+    	height: 30px;
+    	margin: auto;
+    	margin-top: 20px;
+    }
+    
     .validate-area {
     	margin-top: 10px;
     	font-size: 12px;
