--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -284,3 +284,24 @@ nav {
     	cursor: pointer;
     	text-decoration: underline;
     }
+    
+    /* 로딩 */
+	#loading {
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		position: fixed;
+		display: none;
+		opacity: 0.6;
+		background: #e4e4e4;
+		z-index: 99;
+		text-align: center;
+	}
+
+	#loading > img {
+	  	position: absolute;
+	  	top: 36%;
+	  	left: 45%;
+	  	z-index: 100;
+	}
