--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -200,6 +200,10 @@ nav {
   padding-left: 20px;
   width: 70%;
 }
+
+#mainTable tbody tr:hover {
+  cursor: pointer;
+}
 /***** 메인페이지 스타일 끝 *****/
 
     .pwdmodal-table {
