--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -296,7 +296,7 @@ nav {
 		top: 0;
 		left: 0;
 		position: fixed;
-		display: none;
+		display: none !important;
 		opacity: 0.6;
 		background: #e4e4e4;
 		z-index: 99;
