--- a/UdongZip/src/main/webapp/resources/css/user/serviceListView.css
+++ b/UdongZip/src/main/webapp/resources/css/user/serviceListView.css
@@ -117,6 +117,7 @@
             width: 90%;
             margin: auto;
             margin-top: 80px;
+            position: relative;
         }
         #tab-3>#notice-area>table{
             text-align: center;
@@ -164,3 +165,65 @@
             display: block;
             margin: auto;
         }
+        
+            /* 페이징바 */
+    .page_wrap {
+	    text-align:center;
+        width: 100%;
+	    font-size:0;
+        position: absolute;
+        bottom: -50px;
+    }
+
+    .page_nation {
+        display:inline-block;
+    }
+
+    .page_nation .none {
+        display:none;
+    }
+
+    .page_nation a {
+        display:block;
+        margin:0 3px;
+        float:left;
+        border:1px solid #e6e6e6;
+        width:28px;
+        height:28px;
+        line-height:28px;
+        text-align:center;
+        background-color:#fff;
+        font-size:13px;
+        color:#999999;
+        text-decoration:none;
+    }
+
+    .page_nation .arrow {
+        border:1px solid #ccc;
+    }
+    
+    .page_nation .pprev {
+        background:#f8f8f8 url('../../images/page_pprev.png') no-repeat center center;
+        margin-left:0;
+    }
+
+    .page_nation .prev {
+        background:#f8f8f8 url('../../images/page_prev.png') no-repeat center center;
+        margin-right:7px;
+    }
+
+    .page_nation .next {
+        background:#f8f8f8 url('../../images/page_next.png') no-repeat center center;
+        margin-left:7px;
+    }
+
+    .page_nation .nnext {
+        background:#f8f8f8 url('../../images/page_nnext.png') no-repeat center center;
+        margin-right:0;
+    }
+
+    .page_nation a.active {
+        background-color: #0057A4;
+        color:#fff;
+        border:1px solid #0057A4;
+    }
