페이지 및 기능, 이미지 추가
1. 매물 상세 조회 : 개인 회원
- 매물 찜
- 허위 매물 신고
2. 업체 상세 조회 : 개인 회원
- 채팅 버튼 추가
3. 리뷰 삭제 요청 내역 : 어드민
- 전체 조회
- 상세 조회
- 리뷰 삭제
- 반려
- 검색
4. 허위 매물 신고 내역 : 어드민
- 전체 조회
- 상세 조회
- 매물 삭제
- 검색
5. 개인 회원 내역 : 어드민
- 전체 조회
- 상세 조회
- 탈퇴
- 검색
6. 업체 회원 내역 : 어드민
- 전체 조회
- 상세 조회
- 가입 승인
- 탈퇴
- 검색

--- a/UdongZip/src/main/webapp/resources/css/admin/agentListView.css
+++ b/UdongZip/src/main/webapp/resources/css/admin/agentListView.css
@@ -1,11 +1,10 @@
 /***** 관리자 - 업체 회원 전체 조회 스타일 *****/
 /* 업체회원 검색 타이틀, 검색창 */
-#agentListTitlebar {
+#memberListTitlebar {
   display: flex;
   position: relative;
-  margin-top: 100px;
 }
-#agentListTitlebar > button {
+#memberListTitlebar > button {
   position: absolute;
   right: 25%;
   height: 14px;
@@ -36,5 +35,8 @@
 #agentDetailModal .modal-footer button {
   margin: auto;
   width: 30%;
+}
+#agentDetailModal table td {
+	word-break: break-all;
 }
 /***** 관리자 - 업체 회원 전체 조회 스타일 끝 *****/
