--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -281,6 +281,33 @@ nav {
     	text-decoration: underline;
     }
     
+     .showcase {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    .showcase video {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+    }
+
+    .title {
+        width: 100%;
+        height: 50%;
+        background-color: black;
+        opacity: 0.7;
+        font-size: 100px;
+        font-weight: 900;
+        color: #fff;
+        mix-blend-mode: multiply;
+        line-height: 600px;
+    }
+    
     /* 로딩 */
 	#loading {
 		width: 100%;
