--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -170,7 +170,7 @@ nav {
   top: 0;
   z-index: -1;
   width: 100%;
-  height: 50%;
+  height: 100%;
   background: linear-gradient(white, white, #0057A4);
 }
 #mainTitle {
@@ -281,7 +281,7 @@ nav {
     	text-decoration: underline;
     }
     
-     .showcase {
+    .showcase {
         width: 100%;
         height: 100%;
         position: relative;
@@ -300,13 +300,75 @@ nav {
         width: 100%;
         height: 50%;
         background-color: black;
-        opacity: 0.7;
-        font-size: 100px;
+        opacity: 0.6;
+        font-size: 130px;
         font-weight: 900;
         color: #fff;
+        fadein: 5s;
         mix-blend-mode: multiply;
-        line-height: 600px;
+        line-height: 650px;
+          animation: fadein 6s;
+		  -moz-animation: fadein 6s; /* Firefox */
+		  -webkit-animation: fadein 6s; /* Safari and Chrome */
+		  -o-animation: fadein 6s; /* Opera */
     }
+    
+    @keyframes fadein {
+	    from {
+	        opacity: 0;
+	    }
+	    to {
+	        opacity: 0.6;
+	    }
+	}
+	@-moz-keyframes fadein { /* Firefox */
+	    from {
+	        opacity: 0;
+	    }
+	    to {
+	        opacity: 0.6;
+	    }
+	}
+	@-webkit-keyframes fadein { /* Safari and Chrome */
+	    from {
+	        opacity: 0;
+	    }
+	    to {
+	        opacity: 0.6;
+	    }
+	}
+	@-o-keyframes fadein { /* Opera */
+	    from {
+	        opacity: 0;
+	    }
+	    to {
+	        opacity: 0.6;
+	    }
+	}
+	
+	#title-btn {
+		position: absolute;
+		bottom: 20%;
+		right: 43%;
+		font-size: 30px;
+		font-weight: 900;
+		border-radius: 30px;
+		border: none;
+		background-color: transparent;
+		color: #fff;
+		opacity: 0.6;
+		width: 250px;
+		height: 80px;
+		animation: fadein 6s;
+		  -moz-animation: fadein 6s; /* Firefox */
+		  -webkit-animation: fadein 6s; /* Safari and Chrome */
+		  -o-animation: fadein 6s; /* Opera */
+	}
+	
+	#title-btn:hover {
+		color: #FFDB01;
+		text-decoration: underline;
+	}
     
     /* 로딩 */
 	#loading {
