--- a/UdongZip/src/main/webapp/resources/css/common/common.css
+++ b/UdongZip/src/main/webapp/resources/css/common/common.css
@@ -236,6 +236,7 @@ nav {
         display: none;
 
         background-color: rgba(0, 0, 0, 0.4);
+        z-index: 100;
     }
 
     .pwdmodal.show {
@@ -319,6 +320,7 @@ nav {
     
     .title:hover {
     	opacity: 0.3;
+    	cursor: default;
     }
     
     @keyframes fadein {
